PERI-136: interim fix for help box not showing in ie6 - for ie6 only make the position relative instead of fixed - this means it doesn't float down as you scroll, but is better than it not showing at all

--- a/public/ie6.css
+++ b/public/ie6.css
@@ -112,3 +112,14 @@ div.fatalwarning label {
 .label.warning {
   background: none;
 }
+
+/* help box doesn't show in ie6 when the position is fixed */
+#help_box {
+  position: relative;
+  overflow: auto;
+  float: right;
+  top: 110px;
+  bottom: 40px;
+  right: 0;
+  margin-right: 0;
+}
